terraform/config/eks-best-practices/check-supported-k8s-version/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload-01.json --policy ../check-supported-k8s-version.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-supported-k8s-version
                rules:
                - rule:
                    name: check-supported-k8s-version
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload-02.json --policy ../check-supported-k8s-version.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-supported-k8s-version
                rules:
                - rule:
                    name: check-supported-k8s-version
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-supported-k8s-version.yaml --payload ./bad-payload.json --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-supported-k8s-version
                rules:
                - rule:
                    name: check-supported-k8s-version
                  error: ~
                  violations:
                  - (contains(message, 'Version specified must be one of these suppported versions [\'1.23\', \'1.24\', \'1.25\', \'1.26\', \'1.27\', \'1.28\', \'1.29\', \'1.30\']')): true
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
